--- a/AutoScheduler/Base.lproj/Main.storyboard
+++ b/AutoScheduler/Base.lproj/Main.storyboard
@@ -68,7 +68,7 @@
                                     <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                                 </userDefinedRuntimeAttributes>
                                 <connections>
-                                    <segue destination="PsI-pP-n4s" kind="show" id="Y8F-hg-how"/>
+                                    <segue destination="PsI-pP-n4s" kind="show" id="KPw-UD-1hq"/>
                                 </connections>
                             </button>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="Extention to Redmine.org" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IBk-Y7-XPM">
@@ -168,7 +168,7 @@
                                     <constraint firstAttribute="height" constant="30" id="DJn-qf-teK"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="FAF-og-i93">
                                 <rect key="frame" x="207" y="192" width="186" height="30"/>
@@ -176,7 +176,7 @@
                                     <constraint firstAttribute="height" constant="30" id="csh-Ex-m4X"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             </textField>
                             <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cCN-fD-ox0" userLabel="Language">
                                 <rect key="frame" x="207" y="382" width="186" height="72"/>
@@ -253,29 +253,54 @@
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4I9-Wg-uW9">
                                 <rect key="frame" x="207" y="282" width="186" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="UserName" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Bw1-KU-YwC">
                                 <rect key="frame" x="207" y="244" width="186" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="186" id="tac-VQ-cqH"/>
+                                    <constraint firstAttribute="width" constant="186" id="r4D-uK-uuj"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="headTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O6C-vY-fFq">
+                                <rect key="frame" x="207" y="363" width="112" height="48"/>
+                                <color key="backgroundColor" red="0.80000000000000004" green="0.75686274509999996" blue="0.85098039219999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="112" id="R60-S4-Cdx"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <state key="normal">
+                                    <string key="title">Lost password?
+</string>
+                                    <color key="titleColor" red="0.25098039220000001" green="0.19215686269999999" blue="0.31372549020000001" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="10"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <segue destination="NgO-ec-mga" kind="show" id="u5l-23-6ic"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.80000000000000004" green="0.75686274509999996" blue="0.85098039219999999" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="9ov-We-YGp" firstAttribute="leading" secondItem="4I9-Wg-uW9" secondAttribute="leading" id="1KY-B6-2BT"/>
-                            <constraint firstItem="Bw1-KU-YwC" firstAttribute="top" secondItem="4Ue-9X-7v1" secondAttribute="bottom" constant="180" id="4IT-RK-gZW"/>
-                            <constraint firstItem="9ov-We-YGp" firstAttribute="top" secondItem="4I9-Wg-uW9" secondAttribute="bottom" constant="13" id="L5W-f7-6Od"/>
-                            <constraint firstItem="Bw1-KU-YwC" firstAttribute="trailing" secondItem="4I9-Wg-uW9" secondAttribute="trailing" id="U71-aM-m2e"/>
-                            <constraint firstItem="Bw1-KU-YwC" firstAttribute="centerX" secondItem="ejL-dI-HNc" secondAttribute="centerX" id="Xoa-w8-ndO"/>
-                            <constraint firstItem="4I9-Wg-uW9" firstAttribute="top" secondItem="Bw1-KU-YwC" secondAttribute="bottom" constant="8" symbolic="YES" id="ZCt-5N-91A"/>
-                            <constraint firstItem="9ov-We-YGp" firstAttribute="trailing" secondItem="4I9-Wg-uW9" secondAttribute="trailing" id="dMd-4r-ti0"/>
-                            <constraint firstItem="Bw1-KU-YwC" firstAttribute="leading" secondItem="4I9-Wg-uW9" secondAttribute="leading" id="uHl-Vc-AnQ"/>
+                            <constraint firstItem="O6C-vY-fFq" firstAttribute="top" secondItem="9ov-We-YGp" secondAttribute="bottom" constant="8" symbolic="YES" id="8us-I5-fME"/>
+                            <constraint firstItem="9ov-We-YGp" firstAttribute="leading" secondItem="4I9-Wg-uW9" secondAttribute="leading" id="FUD-am-3lm"/>
+                            <constraint firstItem="Bw1-KU-YwC" firstAttribute="top" secondItem="4Ue-9X-7v1" secondAttribute="bottom" constant="180" id="Qid-bV-fvK"/>
+                            <constraint firstItem="9ov-We-YGp" firstAttribute="top" secondItem="4I9-Wg-uW9" secondAttribute="bottom" constant="13" id="SNu-kT-s8z"/>
+                            <constraint firstItem="O6C-vY-fFq" firstAttribute="leading" secondItem="9ov-We-YGp" secondAttribute="leading" id="Ym6-oN-pwj"/>
+                            <constraint firstItem="4I9-Wg-uW9" firstAttribute="trailing" secondItem="9ov-We-YGp" secondAttribute="trailing" id="cYG-wQ-Nlg"/>
+                            <constraint firstItem="4I9-Wg-uW9" firstAttribute="top" secondItem="Bw1-KU-YwC" secondAttribute="bottom" constant="8" symbolic="YES" id="fJV-Ik-HnI"/>
+                            <constraint firstItem="Bw1-KU-YwC" firstAttribute="centerX" secondItem="ejL-dI-HNc" secondAttribute="centerX" id="ged-wU-FDP"/>
+                            <constraint firstItem="4I9-Wg-uW9" firstAttribute="leading" secondItem="Bw1-KU-YwC" secondAttribute="leading" id="lHj-V6-KGq"/>
+                            <constraint firstItem="4I9-Wg-uW9" firstAttribute="trailing" secondItem="Bw1-KU-YwC" secondAttribute="trailing" id="otq-Bv-Xny"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="jYH-8E-1RE"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RTE-gJ-KYN" sceneMemberID="firstResponder"/>
             </objects>
@@ -297,7 +322,56 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="My9-p5-XfI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="57" y="137"/>
+            <point key="canvasLocation" x="77" y="137"/>
+        </scene>
+        <!--Lost password-->
+        <scene sceneID="vrw-IH-5Ik">
+            <objects>
+                <viewController title="Lost password" id="NgO-ec-mga" customClass="ViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="lcA-11-yeK"/>
+                        <viewControllerLayoutGuide type="bottom" id="V6V-ZT-bzm"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="7vh-1e-twf">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="headTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="V5c-H1-1Gf">
+                                <rect key="frame" x="207" y="325" width="186" height="30"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <state key="normal" title="Submit">
+                                    <color key="titleColor" red="0.25098039220000001" green="0.19215686269999999" blue="0.31372549020000001" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="10"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
+                                </userDefinedRuntimeAttributes>
+                            </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fhL-GX-ghG">
+                                <rect key="frame" x="207" y="282" width="186" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="186" id="o3r-c3-vgC"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
+                        <color key="backgroundColor" red="0.80000000000000004" green="0.75686274509999996" blue="0.85098039219999999" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="fhL-GX-ghG" firstAttribute="trailing" secondItem="V5c-H1-1Gf" secondAttribute="trailing" id="1Hi-ep-ylR"/>
+                            <constraint firstItem="V5c-H1-1Gf" firstAttribute="top" secondItem="fhL-GX-ghG" secondAttribute="bottom" constant="13" id="3cA-bm-X9U"/>
+                            <constraint firstItem="V5c-H1-1Gf" firstAttribute="leading" secondItem="fhL-GX-ghG" secondAttribute="leading" id="57d-RR-X4H"/>
+                            <constraint firstItem="fhL-GX-ghG" firstAttribute="centerX" secondItem="7vh-1e-twf" secondAttribute="centerX" id="bjA-mt-DHi"/>
+                            <constraint firstItem="fhL-GX-ghG" firstAttribute="top" secondItem="lcA-11-yeK" secondAttribute="bottom" constant="218" id="y7Y-EC-JW7"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7Ol-Vw-bdg" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2193" y="499"/>
         </scene>
     </scenes>
 </document>
